--- a/app/src/main/res/layout/activity_sign_in2.xml
+++ b/app/src/main/res/layout/activity_sign_in2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/activity_sign_in2"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
@@ -16,12 +16,19 @@ android:orientation="vertical">
         android:text="@string/sign_in"
         android:id="@+id/textView" />
 
-    <!--EditText
+    <TextView
+        android:text="Email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewEmail"
+        android:layout_weight="1"
+        android:textSize="18sp" />
+
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:hint="Type in your username/email"
         android:id="@+id/editTextEmail"
         android:layout_weight="1" />
 
@@ -29,19 +36,45 @@ android:orientation="vertical">
         android:text="Password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textViewPassword"
+        android:id="@+id/textView2"
         android:layout_weight="1"
         android:textSize="18sp" />
-
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:hint="Type in your password (6 characters or more)"
         android:id="@+id/editTextPassword"
-        android:layout_weight="1" /-->
+        android:layout_weight="1" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width= "wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <Button
+            android:text="Normal Login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonLogin"
+            android:layout_weight="1" />
+
+        <Button
+            android:text="Create User"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonCreateLogin" />
+
+    </LinearLayout>
+    <TextView
+        android:text="Status:"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewStatus"
+        android:layout_weight="1"
+        android:textSize="30sp" />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
@@ -52,4 +85,4 @@ android:orientation="vertical">
         android:layout_gravity="center"/>
 
 
-</FrameLayout>
+</LinearLayout>
