--- a/app/src/main/res/layout/activity_sign_in2.xml
+++ b/app/src/main/res/layout/activity_sign_in2.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/activity_sign_in2"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:gravity="center"
-android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_sign_in2"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,7 +17,7 @@ android:orientation="vertical">
         android:id="@+id/textView" />
 
     <TextView
-        android:text="Email"
+        android:text="@string/usr_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textViewEmail"
@@ -33,7 +33,7 @@ android:orientation="vertical">
         android:layout_weight="1" />
 
     <TextView
-        android:text="Password"
+        android:text="@string/usr_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
@@ -50,39 +50,40 @@ android:orientation="vertical">
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width= "wrap_content"
+        android:layout_width= "match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
 
         <Button
-            android:text="Normal Login"
+            android:text="@string/normal_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/buttonLogin"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            tools:ignore="ButtonStyle" />
 
         <Button
-            android:text="Create User"
+            android:text="@string/create_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/buttonCreateLogin" />
 
     </LinearLayout>
     <TextView
-        android:text="Status:"
+        android:text="@string/status"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textViewStatus"
         android:layout_weight="1"
         android:textSize="30sp" />
 
-    <com.google.android.gms.common.SignInButton
+    <!--com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="visible"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"/ -->
 
 
 </LinearLayout>
