--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -24,6 +24,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="5dp"
         android:id="@+id/message_text"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textAppearance = "@style/TextAppearance.AppCompat.Body1"
         android:textSize="18sp" />
+    <!-- android:textAppearance = "@style/smsLayout"-->
 </RelativeLayout>
