--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,24 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <!--style name="AppTheme" parent="smsLayout"-->
+
         <!-- Customize your theme here. -->
+        <item name="android:textColor">#ff0000</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:shadowColor">#ffffff</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">2</item>
+        <item name="android:shadowRadius">3</item>
+
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+<style name="smsLayout">myStyle</style>
+    <!--style name="TextAppearance.AppCompat.Body1">myStyle</style-->
+
+
 </resources>
+
