--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/tw__solid_white">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/message_user"
-        android:textStyle="normal|bold" />
+        android:textColor="@color/com_facebook_messenger_blue"
+        android:textStyle="normal|bold"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/com_facebook_blue"
         android:layout_alignBottom="@+id/message_user"
         android:layout_alignParentEnd="true"
-        android:id="@+id/message_time" />
+        android:id="@+id/message_time"/>
 
     <TextView
         android:layout_width="wrap_content"
